# django_rest

./: .gitignore  pyproject.toml
api/: models.py  serializers.py  views.py
api/migrations/: 0001_initial.py
sistema/: settings.py  urls.py
